# sales_prediction

./: .gitignore  Edited_models_new.ipynb  README.md  Research_resources.md  requirements.txt  staticwebapp.config.json
.github/workflows/: backend_aspyr-be-new.yml
ML_Model/data/: sales_data_final.csv
backend/: main.py  pyproject.toml
backend/ml_bin/global_lgbm/: product_encoder.pkl
backend/ml_bin/prophet_individual/: P101.pkl  P102.pkl  P103.pkl  P106.pkl  P109.pkl  P11.pkl  P111.pkl  P112.pkl  P113.pkl  P114.pkl  P115.pkl  P117.pkl  P118.pkl  P119.pkl  P12.pkl  P120.pkl  P123.pkl  P124.pkl  P126.pkl  P127.pkl  P134.pkl  P135.pkl  P137.pkl  P142.pkl  P143.pkl  P144.pkl  P146.pkl  P153.pkl  P155.pkl  P156.pkl  P157.pkl  P158.pkl  P162.pkl  P164.pkl  P165.pkl  P169.pkl  P172.pkl  P174.pkl  P177.pkl  P178.pkl  (+355 more)
ml_bin/: sales_data_final.csv
ml_bin/prophet_individual/: P1.pkl  P10.pkl  P100.pkl  P104.pkl  P105.pkl  P107.pkl  P108.pkl  P110.pkl  P116.pkl  P121.pkl  P122.pkl  P125.pkl  P128.pkl  P129.pkl  P13.pkl  P130.pkl  P131.pkl  P132.pkl  P133.pkl  P136.pkl  P138.pkl  P139.pkl  P14.pkl  P140.pkl  P141.pkl  P145.pkl  P147.pkl  P148.pkl  P149.pkl  P15.pkl  P150.pkl  P151.pkl  P152.pkl  P154.pkl  P159.pkl  P16.pkl  P160.pkl  P161.pkl  P163.pkl  P166.pkl  (+376 more)
src/components/: LiveForecast.jsx  ModelMetrics.jsx
src/pages/: Home.jsx
src/services/: api.js
